<resources>
    <string name="app_name">SuzukiApp</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="user_image">User Image</string>
    <string name="select_image">Select Image</string>
    <string name="car_image">Car Image</string>
    <string name="admin_login">Admin Login</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--add new car-->
    <string name="door_count">Door Count</string>
    <string name="colors_available">Colors Available</string>

    <!--<string name="fuel_type">Fuel Type</string>-->
    <array name="fuel_type">
        <item>Petrol</item>
        <item>Diesel</item>
        <item>Hybrid</item>
        <item>Electric</item>
    </array>

    <array name="transmission_type">
        <item>Automatic</item>
        <item>Manual</item>
        <item>Tiptronic</item>
    </array>

    <string name="add_new_car">Add New Car</string>
    <string name="features">Features</string>
    <string name="price_in_lkr">Price in LKR</string>
    <string name="transmission_type">Transmission Type</string>
    <string name="engine_capacity">Engine Capacity</string>
    <string name="release_year">Release Year</string>
    <string name="model">Model</string>
</resources>
